[package]
name = "hotstrings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.124"
queues = "1.1.0"
x11 = { version = "2.19.1", features = ["xlib"] }
xcb = { version = "1.1.1", features = ["xinput", "xtest"] }
xkb = "0.2.1"
# xkb = "0.2.1"
